disable intel-device-plugin-operator chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:src46QWoHMDOdLcRgDpqyCf/jNELcAcrSfCEiagx5LSxIj5njbQGwIVc8/mqIo5L2QUdfcyb+Ba3KVscI8FVMqk=,iv:Zywjs0IYaGUfPu1HVbJ9AeKMjRvtfHLrvM599xH+/A8=,tag:KTQ/gxgYBbJBzhGrW8vwaQ==,type:comment]
-#ENC[AES256_GCM,data:2PSrDG+J2ZvCKBeosm35AJaUfmju1ex3+dXtuUqcLC5Cln22F/jsbuBEL/0=,iv:D9QU3JgV7t0e+wSYh9JIEsXbq+2QcqNPTzH3YsYIE8I=,tag:sDwMrZCuDg3T0ly2PbhvDw==,type:comment]
-VIP: ENC[AES256_GCM,data:jZd6HLT426AiLPSE+A==,iv:6A2702QbkcHdfpcx5ofhsxi7MuYRrYn9rjItpYuu1Bk=,tag:gLD0pKswJaUs7tdZm4cMgQ==,type:str]
-#ENC[AES256_GCM,data:isprNnNEfo/bLV00g8jAg5eIVZyvSyd82Kns,iv:L2KnNz86IwCC8FnGKdqvB4vqo+avZs7HI57FFMX6LYk=,tag:Q2hgAuSU3SBEvWRwJkC1PQ==,type:comment]
-#ENC[AES256_GCM,data:sxJNljcHddTx7o1fWl35Q+yxFjy+GIjk0w+zUeqfJMyCORXQuRfNe0XV6SF/Io7EFgA8OBnf81LU7FTM86ZttY8P2jJqYNvh/So4/W+b/jRPC2tFATRle1k=,iv:kdWZ6kNojducX1IyYml5VtHIkM9PhTCg2QfpOi7YPpE=,tag:AulR3Sfr1yTL8fW6dEjWLQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:zTyj27xLEAA/R5raq94=,iv:xzRP3WyvtfqzAUTAfB52hPHeJ0a+VkeE/ZZF7GQBH34=,tag:gV2eA6wVJybOld/ddtkvhw==,type:str]
-#ENC[AES256_GCM,data:Uvn81jCR+w7SinmzUjibCLgWZIZGGmTDnui8SO4732LcpA==,iv:PFNcha/dKOdrRRNRNp6xCqGeGgFvURCrExCf3rfHTXM=,tag:nYKYN+4oyqxo6JFZK+QDQg==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:d5W+WZmwR57iO6HTtA==,iv:CV9va+/3Dd5YxGcPDcG7A94bo3u/VaxED+/Cax7ow3M=,tag:HcMPbMm4BVO9+nodWnfk2g==,type:str]
-#ENC[AES256_GCM,data:5dGiBDKWguO0N4VIBj6/pN4Da6ozYEIekCeDqeuUmTC7XTBeMK3hCeBrDPvvqeM=,iv:/l3BmZpwNIyrq00VrNRBa+Gp7CYUnDn7M5hx9Abo0xE=,tag:yxm1Cpn1vt+1m9UJgqABTg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:3MjsFu+vr6jeNnKOngFAD35107BbtJ4UstRbas0kIA==,iv:bx23h8CQYoyfrMVkPzYYVr3IASKDpj9qn5jaEC/clSM=,tag:dj+6e2Ts2NBYxirc0Hxgzg==,type:str]
-#ENC[AES256_GCM,data:Va+z1Eq78P8tzzNKiRDybkQy+eB9W89PthtM+v1UgLam2p5+MCNAGlNBLkNdSaiw4aXNZxn45KrEQ/Ysta9VBrsNA6RdG2zm3fvhuMFTc2WnWA==,iv:MbjqkwQ0hd/XHRUSSJZywJRmXQbf8Kp3uD7gB+N4bXE=,tag:BVoyQ6VtEljtdNFos+nV4Q==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:zk8/u06IuQwrTpDzs1C5,iv:6KeFTz1G13cblXoDMREvGhmtwsX5CiGDxcPpheKCknk=,tag:9y57WZ3mfcM/6eaC1Ep6AQ==,type:str]
-#ENC[AES256_GCM,data:d6DpKNr9BFQ12OPOSjF3YT20KVFTesX3Rtcay0itWlAW,iv:GWGyvUdZkv+O/k59BGP6DqXcsFMkf2TrLq/2R3Iw53w=,tag:TDldAacs+GCxliLi8zGYog==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:EDM6/x4X4M7M8sK4FCGs,iv:ykbHuou+XaXQMb/LJxTCupIdZ9PjsV+HCSC2LhHolkU=,tag:q8hFJ1X86qR8rn9NePNk0A==,type:str]
-#ENC[AES256_GCM,data:iulekEnvp5VkDr2S9l0fH0zKdXgRFBKyDzv3nsSWuSLYf/mU0Be/s6jpp3SIbqUj4LgAnm312o2trMOkwg3qyxJ+o31Xbv4BJegkfrbntSk=,iv:sOZxcriddOFcWS4xZfHEn+XIo4+/R0mG4TP9aPxYw6k=,tag:V5E8TaEh3CpIehcQemtX7A==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:R/pphLtk61JRwbQHvaKJ,iv:JWSmNqbTRvhSY0l1jhei9MeqE1q5Gpe4TXuxr9VXFzw=,tag:GIONEDhVrQ/uXwLaRS+vMA==,type:str]
-#ENC[AES256_GCM,data:Z3KHNRHWqsXM8jKETy90tiaBh/xyZLD2SZF2GRqFdggrOnhnUx3cgwrbS9H0McqhPVhUFc7cZ/hjC2GUv/E0X/QIQHc3F85f3K/m0pRq28p3m9iwAP5G,iv:yN4QDhpegP5LioI3nZNp1e2ETdJBi2rtpAGB1uroTS0=,tag:yyLbPwRjutK6G9dgRp+s+w==,type:comment]
-#ENC[AES256_GCM,data:o7TfmnQRzJ1YdcqmYWQS9wF50d798i/RIGWThAgoW1elm/owf4A/feplVG0ajQwogQsJ4MSKvItkBEQnczHV3IB3QGDvSmy4JhmMtJEIV8PPAso+bcEfI31BdHq4c/oxqCM+toQ6ys/zoS45aS78KTev7fk6VcGgo7HZDg==,iv:2DCCtNza9beXVt4penbvY+U4WSBsp9pbGL5XXP23yOI=,tag:s0uIpGaZYC2jhlNMyMfy9Q==,type:comment]
-#ENC[AES256_GCM,data:noPB0MLmNhUCvcN5Ow/tDMxdEslWe7mYV2YZK0pGviUbhVrbiACuKc/mGnWaSOZewW+ku/np9t1xQyDqepor7iBZhBRTDsf9QHqMr0zDCnU=,iv:mfqRyAuf8uzg6FtsByPBy2PGM5Den7fvnzKmZclatoQ=,tag:e2GtXCUfpdm111XfUcQUkQ==,type:comment]
-#ENC[AES256_GCM,data:Dx/K2ez9iuHp4dmKGNDhv6Q3bqf9uf1qHKwM8fxiLWt7kBV1A/bNSyNhw6UGA9hs771B8RwG,iv:s6VMoKyMmVfn76wzdBT+IBOOS8ESbJxlM4FT2uNEYM4=,tag:g1yQZ8x42ZeH9JXParilOA==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:0IqUm/ZfHH0BEx6Q,iv:RNridmsBe49jLL3UgjDveKHD4LRIxt1es5Unf2M5jsg=,tag:09DduAYCzI39oFyJKX95AQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:OhmopHkyK2jYtZYI1sI2WFE=,iv:ZWJObkK39UFGyVm9C6G3Qnpd3Fh8DFdLiudkCTZM7a4=,tag:VNitUf7DLblYzGS6t0NEpg==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:SoAz1gGqHMWeAYdJqAc1B1EMbc3mlUlUbhS0dXTfoFM=,iv:wr6FfyRYXIEZenycJVG0aSc6xmfaVptp4Jj5TIpQn4M=,tag:RNOO8EPe/mKPzhu7zYqtyQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:HglIDiEfdNTK11XZcI5oKBCLA4BdhVT41tTaXbt9SfyX2s+YRTkaFg==,iv:OyoPvk6bh0gxjJrzqRVVAV+sww3pQbFweAGKvkQcOOI=,tag:rIDcbtopjmfiNUJr7bgwQQ==,type:str]
-#ENC[AES256_GCM,data:CpO9Zh2i7HiVHn9WGkRiTTqZq3Fa9WfEg6A1tU+VS3koUgK4unq6JExC++p9+lQdu4Qb1/pVERXNbySbWyJxiw==,iv:MteAE/aDb5ninN3SpxWds3Fbh+Pm4L5NL+va0LwD+iI=,tag:5i4PzZLl10nWM6ZT1ZjUXg==,type:comment]
-#ENC[AES256_GCM,data:qPbHiFNZow2EfVFZzH3mER6iRa0Ze6k3tiLllMSmEoJlG8/CO4PcPh9uY9fGjljtS79xPXRlFZI=,iv:k/JGwGYfY5toPFCthlX9f0eC+xZTiPOlBgPemxzz8lw=,tag:6aK4N8FbXPlDDjC7lU3ahg==,type:comment]
-#ENC[AES256_GCM,data:4RkfmbEXChEZpHepvWGoetNAgTwFXJWPxw==,iv:1WT627cGuSVPPohitIn9zmdh+sn5/FFmV9CMJDodx7Y=,tag:M4OC4/p5XuASPcE/uvzD4Q==,type:comment]
-#ENC[AES256_GCM,data:JOPKOVAfCvh2S+OTFYG3J0B6f7Jc8sKAK8KOWDUxScZXYJZejrhDYJT2lk2/GvylrKBZdc75YqGmyVF4Rt4K6SMlRRY3HwJkjjsKyus=,iv:CYG/S4KHHyrTrf1DSo8nRo4lJevCkBmgMV8SPU1aQus=,tag:xbqXR5X0CYzk/G9Z+isUYg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:YvDDQeo6EqvmVBovpJVY+kXVqR+nX/kfWqM1pQzkqrSziDAjmD2HsN1yn3ZQoez9,iv:v/FSfygCS2fyeSVbW7UrSGwK9rk8qTd26D7qfPTOR/s=,tag:vHtnEmpbRVkP4Y26qpgJaA==,type:str]
-#ENC[AES256_GCM,data:kwbQ+lPyJvswWYKxpK74XfU5V21PRdGO+O0j0UBIKvY9FD3an7r7mGc/F6flht3tk/aAvE1xIZZ33MdwBPCk2Q5N3LY3CB4=,iv:0yeCrlSJX0OliOmnhM2tHZWbRFyRHooy/MePsLoVvAM=,tag:ZEmZ+W/08NZijYJ9tLkY2w==,type:comment]
-#ENC[AES256_GCM,data:mpwZVNTNiq7EU3Yj1as2VRBaMBG+9LzFIeAbwDQ6OV6Xy/t9DihAIOGL4TjsKB39fYwfsMdG,iv:Ssjmc8/louzdWRYelXXLPOcz7kYKzl4sp+v6nOez5qM=,tag:YjHovgsEvqowCXZqmNzJxg==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:2MDnQunFHg==,iv:1lzLVPnPEztfTj9FZ5xxjIMoUs0krzuNpu4k8ZzlSjo=,tag:iagtc0MRQB8EVhsuxx/xgA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:ZiWiaBcsLdJQu+3FqBBvhXeuB24=,iv:EJgC/hD3XDMRepBMt7+o4IreGgEecXCndkbV27BEtx0=,tag:/Pv8Vjz2eMII1P/P6yzyzw==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:5PUgYCpK9PULsm0=,iv:w6i/3LrPxeuFw9lJUCxrWDwkd5DOqpGgP4EI+ewixhY=,tag:4dkMp5lKtXrghnPmqmQ2pg==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:OOZPbxwbFbTuszLCnZJ2,iv:3m5dOvh/VnG17LyI83BmQPIyLVcXqwP+NZm0J1/2gv0=,tag:jNqW6e2ecVYlGSmVVeXsgQ==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:YAEd2FBYKjFp546M+nGuPc2o8Wtx1K34jQ==,iv:1VCDxkf3DMKzj6uvpWJtzXoCLoi8xNPOgyKBYkpuFKs=,tag:HN953UXwapqA8Sizw8mN5A==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:lG4a8RkcKDP1tZoJTVeRon/uKHREVv0XPKeQICJprw==,iv:wK6CZO1K+2KbHnMBypiAitz+gOkg6u4cMtT43v5JW0g=,tag:9boWI7XA7Z3MVFXvRHqPZg==,type:str]
-#ENC[AES256_GCM,data:5nVtqilXzcioEvhRXLzx6uA5kmaIeioTJU0wQYm2cX4TEN0xMCE=,iv:Uycn4LbegFw9VlICE27u4db4aGvkbiuB0cv6jF4LUGw=,tag:m8jNYT/kMPwelUWuwyBihQ==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:WNQ1H+0aN6MgA+tFS0vNA1S1TDw=,iv:Odhc0YIcA1eLScvR9YIhGZ5MsArttDRhCCzFYRPqOlU=,tag:/yVI3uMEVrM6yfwHU3OguA==,type:str]
-#ENC[AES256_GCM,data:iYDkTmhYo+DRsBrEQOY=,iv:3jTDrjchnsVTahXpsgw+CQJvDAImkD7LCuIOwkGtrPY=,tag:V1+dKmB0mQFClZ9RVE7aJw==,type:comment]
-PODNET: ENC[AES256_GCM,data:LQWsw13tOA9GE9Kb+w==,iv:sp2LmV6m5SNQ1QdjHvMHoxAWtZVmRR2npErwQTOfWSQ=,tag:8vdcbDb0l0Lo9RFDA36l2A==,type:str]
-SVCNET: ENC[AES256_GCM,data:tGVb3amiiSgNYfdlaQ==,iv:YlZXQi27JpT32J0BjcnPfGgQ/x77gfPkfpTTf503HmU=,tag:HW6q7p1B8ek5BWebejFHiA==,type:str]
+#ENC[AES256_GCM,data:eIqXw1H7d9S1IxXPhlTVUmuHklgHGlv+mPNC+PBcSrw3e53HC47cdC57W+/mkGS4M6uZ8qhRnBIcn64BjP4lOe0=,iv:YSPMBwIw89BeDBpgYocf0KgSgDpBKkHLxDbroUouiso=,tag:2qLZKn+oYIlSPgZQusdmCQ==,type:comment]
+#ENC[AES256_GCM,data:Rlvc+DNowX/79FkEsd/URKzfhtf+FVoB62N33Ij4YILaHly+AA6tb4BhCC0=,iv:JPjEHv1gcrms36D+rkkOGIBIHeEf7zi7l4KeL9qvh+k=,tag:zBGslUPUzKwfT3eqmJfXxA==,type:comment]
+VIP: ENC[AES256_GCM,data:zeLYv54XqYYuWPwyZg==,iv:Un9DQl3suXLBqNOp+3epDYME/48GZM6BbHlzRaRF/DQ=,tag:+1lCspit9Fisjnx77t29HQ==,type:str]
+#ENC[AES256_GCM,data:oqqD/JF9uBCPrn8lhQZ22XEgFfZvfOYpvHi/,iv:fDxnqpqR5q3YQbqqqKQQPz+qI4zgVS/wZVy2/+7TENg=,tag:nALQH7JZNxV4IkNpwdYYJA==,type:comment]
+#ENC[AES256_GCM,data:mOZu0MVl5Q6PhoPhND0Q7LsocnkbgGmAbaFwSatfODbQ0CZ5+c5nOrGv35ja02xG8wlQLb6a31VbjAguFEufG9llPRpOEEZjiqKaY1japTGOXO1ungg4Xs0=,iv:0vo8Ve36hafygAxqJTjHpJccLou3t9CHJ+80H2D7Np0=,tag:OyF/zaH5M8a5q1YWkFamNQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:jnbiCPf6eGNSvSVX0CI=,iv:RWIAwFKgfuVwC0fWvWid76cZErekDy3XSPiuOVM6B50=,tag:qWcPxlry2itEdfovmi/Oqg==,type:str]
+#ENC[AES256_GCM,data:/gT3dKwMjXktC100937RJX427b887/E6xmxRzLCfjajraA==,iv:XQ3H+rPXBxZn3v4nQn+NiCiqPD+UOfg+VkOCy5nYqZ0=,tag:6GPk8ATdTS3dpw0q+M7KjQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:1ctX4lBz5UEVDEk/Og==,iv:leD3NeXKCQE05sRFPv3l1Eib6nnS42kjaZmkIngX5yQ=,tag:YWAfcstOhpXV9EHESjVgQw==,type:str]
+#ENC[AES256_GCM,data:ELenXj0/LgErqrbIQJ7Kf3bXrijXISkJNKzCiWaxjcq6j+7j/h7FgCqBwyVBRm8=,iv:/e7BRH+MyxAVlSKNWjZtRoeMgRQ+zdL+aUjT24eoJII=,tag:h3PqZ9KEwLm/LIy8WuDnQQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:jAw+OlZLrNSrdIku88/r5Asa1JghAoWsEtpg7O80eg==,iv:GPQ8SGWWDD8tA7Gj6F2LfuBReYxvqunTUUCwMQ/87j4=,tag:loBs76Snc61cvBewLFPZmg==,type:str]
+#ENC[AES256_GCM,data:svuX6rOa3m3vGfsa+xNc2WELuKSiDpc5/59/URyx8v2V7Gnx1yzIOCV6Qxi919P84qwaW6BYTpTqXytCgLnKvV7QOoZ2C/1Njaj6JfDLfReLHQ==,iv:nycRpcT4t1cJK9lktZ/r7Egtv/iDJIjZ3lgjUG6hh4c=,tag:NqC+b38ruZLwZQuomSg/qQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:AkmRUnr4qltM786Rdx23,iv:4jLecM5wEGAoOluFekQN3XTU8p11ODOoBI88n2Rezjs=,tag:sdkIP3E8Q8m6kRpmTCK5sA==,type:str]
+#ENC[AES256_GCM,data:GEyFA8i8U/05Yee7282GaMLZS4Qs3z1yakGXWoREAhnc,iv:b6cVYq3usaK3azKtUZtROFbdQsAbuOrh+/Pve11Nx1c=,tag:Pt2wOfJMei4fnSns9tomQg==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:kU64y1gLDlfJeiG/7rpy,iv:zc4cpR3XfX4wUbf8y5rdBwcdvWyQFywpEtAuNstZwLA=,tag:1hSarwyhtekmv+SE+4pbqg==,type:str]
+#ENC[AES256_GCM,data:wa/w9kJgDfUC/uEVHJiP/u7PlcU7D6qmXlOOe6SKaAA0eHVcwxlybWUVTmI1d7T07lJ0u/W2t95+pm61RYxX8RGmWHBNMxtgpf6UWq+2FH8=,iv:nJK3QnZ/ElWJVvY5ey7J9hYZsFgYdA2bmEH7lOqZR+U=,tag:cQL6o1ANiK4OlYe98xXiyg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:KDmJ0nzhx6sPNkmXNiU7,iv:8k4Il/aMIqTk/tA2N1x23+5rME1dJWgKjdLCcA2M2UM=,tag:o4nn3CDk0fXLCFwa7vKAtA==,type:str]
+#ENC[AES256_GCM,data:p0MImwza5g81bjnpWGSl8M995Cj0tYTE/Wqlo3Ff3hHAmogR9rk7GMLKpM6h1XfPyWFfdxYhByKVf6rqOb12dLgU4Cm+utAZt51krennl5xWAfwaI786,iv:yxI/iyiuuK/XEJvHecHuuxMKegJhPbGT5juT0zza+nY=,tag:jI295RXxepyZqc6rlodr0A==,type:comment]
+#ENC[AES256_GCM,data:BQYKqyCsax+qsrQkJXNGu6gXS3+OapKuU2AbSPD1srEQOL7GOyNPleAyybi6FETw6pWzX3UfNRCLVRxo52ZcPyW8hf36ejHTpW4r6ZEkOtUSzpvb+Y+B+Zy4QX6RlEK3n9Ao4iD0Vjd9LcEx2veT5kig54fn/gBd2Fsl/w==,iv:MhhIczDjEqC1kOsRqgXz0t0zi10zZbJ/JCicBl9Rof8=,tag:uVGkoJg8lDFTuJvvHF5pxQ==,type:comment]
+#ENC[AES256_GCM,data:clEF26tORzMpH7N2Syz/pDFnMasFMg3E288VP5H8f2tZrSjFmX/nlM1EkGdI8kO3r9QqGNGAw3EYC7kqG0K8OgdPk9GMmTHl25iOrCZglXg=,iv:DUqkjSbTOXtTkUUYC4m4C5cOVkxO+jUZdroc7f6ZRTE=,tag:fDzTKVzEz3d/QuYCth+2fw==,type:comment]
+#ENC[AES256_GCM,data:0oe71XHPFyHnIAjhJJlgYv+QfH8yGCvdauHyiX1MTVzPNDdzNMUcWZMMk8skqoEbpi63iFHO,iv:bQ5mvIvK90fap2wYvt+7hufhho6urADXWODb1tEiGgs=,tag:yNF1/LO2in4QS0ZMLjXrXg==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:L1Cfy76K/dTYuL/r,iv:eHKL5qPhCAW6rUYOjendFzcMlWwPSWZvskCrCIhrHcY=,tag:ceReVRt9lAfs3PQQ8D9UGA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ghWold4EzBpn5Z1yobKSYhg=,iv:zzKg36YDrAOFW1VxSb7xUG0uL1coqMDOuqiWDmBFC4o=,tag:ZLzQm1nHTUPkWzHYSzib9Q==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:/wmB7bFJ98HhpJ+8cVbpW7E7wNInP2CFGCDCLbd9/0c=,iv:pkKR+qDLxdVrEU0VL7ZCKNrm1S12A3hHIIm3SQY81I8=,tag:5hX/Y/YraqPmvjsUy0HJJA==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:5AzS4aB3r0xtdKGWOMbiMYuMk62bh88jN/ajd+Nn6uPZLtWD/RXWeg==,iv:lmkpIodm5e0jIJwcKkJ1vxqPqQ1YWbGWglfZNWeZJgc=,tag:ECZGmUNDHmaNRvEPk0cQqg==,type:str]
+#ENC[AES256_GCM,data:L80LmMxCscdVHPyI/4uXR3xc9gSj083boLEgr7FyBkRKTSjJR6b2gSUmHG5tQBfXkxYaQVmo2aSNX/Vpd7+Jmw==,iv:u9uhA71amP4x7FVVQC64cKSIfCBruhPdPYS+V11Tl8A=,tag:HuKAQSijGgre4bFpSzQwxA==,type:comment]
+#ENC[AES256_GCM,data:v7NExQxM+ERjSLk9HVW1zeoTvDfGedNC7n8KN+weZpl59orQPlrFwo8eyAQZBCqGI9vzBlFGOhE=,iv:T8HnMWAlKjRpuf5BNbYi3cszmyYjCT8tNci3ErBzkDI=,tag:PfOnRaJRH6x0c4/8duE2+A==,type:comment]
+#ENC[AES256_GCM,data:tavRzO/d3cErYdzOmlocMRFXBlvr8cex6w==,iv:kZcQk2lKmQ15xPNYTsHRTVuDBnuf3G/uELHDZkhC77E=,tag:GwsaHFS2UBGY+QJXopzh0Q==,type:comment]
+#ENC[AES256_GCM,data:zKVET3rIcUIgH3cYxAJ8eQ9UEmJ2HjuN9+1Wm2u7c/DaBKM2AjF9I7oskHkBKZfGjOcoGtXwwagh5/i26Rr7TCstIEvn9HkUACYDB68=,iv:x+I8LUeFb5+yD6d87T5Ttn5+7Kz7/tZSgg6LcxbtX64=,tag:AkAt2yVtNDWGlVjLIvui6Q==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:HTmtHHgqs8HIMWP4LiPC0OG2oPHp4L7s4QJMv2BCRgVPpS3Ybp/JQzDVJaVjl/m9,iv:aT90FTFKjkhBFOOu8ynGgDrjIefd+79opropqSkLb9g=,tag:3Uu4n1BTDYGvO6S66WmeKQ==,type:str]
+#ENC[AES256_GCM,data:SruIw83SDJxygUMEp1Ob1pXMcXrN/BVt2Zs3pbbMfA2xSG6KQ754MGlmMEewfSeDvx0A3KVyhsS7nzvgJzNZ1cK9gvQzFy0=,iv:eqtDmaiEZa0Ia3zPGK7IHCIwDfG5Vj7BRnuWPeooDww=,tag:nruOoplDW6MAQv8rd/LFLg==,type:comment]
+#ENC[AES256_GCM,data:Gr/00S8FmoLkudjgRfT6GA1Vvig22rfYexfRwDrLX7WkAPbss3FA5ajBLAo09nLMR93bKB8r,iv:VKrxSmhaX96BXMtCXRGMs4zBOasrEy2tyKAG71Mmjk0=,tag:7AS9QX7ZD7BnJYcYdCnQ3w==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:Dx3xr0vYSQ==,iv:ZjPSRDVDdrgHSKwhXcKOiXN01pbR2lZOJXDfTIuYo2A=,tag:HZCJgXQuSQbHq9Butm6L5A==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:dMlXENZml4bkAw0sxhDQMWbad5Q=,iv:EkAIElL8Fv+Nol6AQ5SRZkklpnwgOZtNlLc0TdbyZjw=,tag:2dSPgHBK1gBUixD9wASKSw==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:h8qxsTD99z8BreI=,iv:8CUcOmzJpGQDZj6wk1ivypwQGIU26TCSDavaL+2gOb0=,tag:SC5JuQFp2WF/JdXfrx5ZLQ==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:c04rGZNhExh1DMFapALz,iv:bwVkQkM54n17KkF9CvTVVrzAAOyeskOkA+3PNFHypX0=,tag:Me09AxJ59OqfVd3vNbJPbg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:+NJsVgezW05Zly8tPMA8guZNrA+zYFxhiA==,iv:DzDyIAFL83jOWp/6Q/8j/sh1QEwlB3EaBZFONGd9//A=,tag:ceHPeyqx3npZ8k5o1UrkjA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:kYtLnQdbLUBs83WeOa1c6B9ttSf+FSGgJ75MrznVCQ==,iv:+PiDnoFqKX3MAZulrDpbB6PKaPO63VhD0ncNXm7XMoY=,tag:mk1g4T+zKBBWNvjFojguAQ==,type:str]
+#ENC[AES256_GCM,data:2mLjLAEpP96oOkwJyQ6JOLvogMUCsXX+sgyKeLu0rtEjBc8zzHs=,iv:wHusgGzrvspOVXdSUoK8TjzeQu7rC1VXn1Dm0i0AEdg=,tag:K6+BFBx84v2UDQtuhFjQLQ==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:GE+8DE57YKHhFRjvWbSiDkl2Rwg=,iv:f2wD09t+SoCxYor8dALjRuDbys1DKnRMTCMAAN4lDjY=,tag:m6zA9+zPS1tCGKcSSLj4AQ==,type:str]
+#ENC[AES256_GCM,data:fNnhgaJ9TQnk0oXD9/k=,iv:8C+2zm2J7vGN5Qrk+mNcYNRn177rJBKM9VJiL3CKQbI=,tag:CBEbtk8wG+YyeV9NdCikGg==,type:comment]
+PODNET: ENC[AES256_GCM,data:qYQt7IK9Y1hcseLG8A==,iv:Iqs9pEVrjsPy+4vGDeQaFiYar0AVZ+hzABMoytmiR4Q=,tag:x7LjG4UvLA/pjVj+Iexy8w==,type:str]
+SVCNET: ENC[AES256_GCM,data:iDQsedkZg1mKjRyung==,iv:v95E/Gl/A9nl/mD7fzSaaMeHitldLdkYxhVTqRr4V3Q=,tag:g/P6FxU/dM7tsvFxQfactg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBudmFUN0lxWnFJaGJBYlZJ
-            eERiZ2VFc3p4YlpHZHB4UjNQT3F4SEd5MlZJClk3OFFyR0xsWTkvMHVSV0pJdStP
-            ZkpXTTdGSjBMVitrcnhCdEszNjdPVUEKLS0tIGdlYldUNG5jdVM3T2FDZjE4bWVt
-            bDg0dDFuZGxnVUxjb3ZkL21qaDFkZTAKnodVKRdLS7vrir1e58tdY8FQw32qqJDj
-            D63PVchg4AA6e4kiUCTEcV094s62+uVnIn9GiYilqRQkFWf8SWs26A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBibmZiWUV3emRhSUY0SU1O
+            ZnZ1WjlIMG1TTnNGcnRDTWtPWUpvVit0SjNJCjF0YnZRQzJnenhiWTF4d2NZSDg0
+            Wk13aWFjUEJkMHFFMURmSFdzQmpGMjQKLS0tIGFwMnM2VzFTWWQwU2FiNWZDTFdn
+            TmtiS0plSUZqQTA5TDJHZlMvaWNlZFUKhr77Vh0XHD8BJIOd+PGdzb5Nbt8A1FQ1
+            SCgjuboP6lVWdXgtK90t5XX7OK5W1WGcEeCxf9danj3CT8gmWcnC1A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T00:24:33Z"
-    mac: ENC[AES256_GCM,data:MABmvPm2PEI1SOTk/RFIHGOW346CamLKMrBQ/Q7jaB3S0Z9wcp5TK7d4ngz91Tjtb4kn8kmOq/4ylKJFS7ClovqIixlWP9pUM28VuwzbuauKnevTyf86UTkDbUSk87LfNXaGz3QBwqQurphbPReMDweR3Wrh5vkahB6gtciJHv0=,iv:ueb/vd6aEI2+QmyLLCWVZu0bgy1AD9sohwcmLY7rHLc=,tag:RHv0ZkVet4CDA002Xyj/UQ==,type:str]
+    lastmodified: "2025-01-19T01:45:31Z"
+    mac: ENC[AES256_GCM,data:vTG4fGdqcNWCUFFDSNq7xPORKiCB9fkkiTtYwI1E7yTc4X7eWgpIKQUpqVi5YZ2Y6Y+c+iS4ECXGEPY5Ha/HtTDTTPRxM0CmxpJXWGppXX07NPEVVFcX2ylhltCajWEgV5kSFbj88yYUgg6lm6yYcdkCkLswzpvZDXra4aY3p3o=,iv:sBJUYiHdcxPH7paI7l+Jz5pAmvIHiPUEWMc9qcjY95A=,tag:9ZNQLDJeir+BOIfvSQ/Ndg==,type:str]
     pgp: []
     version: 3.9.2
