--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:OgwWvhfrsaVMYTmBIuWPW+kbcmUaLro/1iWSqNeS6Y0qDaE81n5l98KMGULZqQK4DvBNtaKg1lV/qW/Cr31bk7k=,iv:rnT2rh9hYMLoXJIWcRR2lLpQcpzxj7N2JvNnW1DOh5E=,tag:fROgcfqDmZaPSGIN8yqsSA==,type:comment]
-    #ENC[AES256_GCM,data:5woxP2qf+5FN5EP0AVTHyGbvBM9W+QtV8AFyReFtYAy3D5X8DSsJuY+EV8g=,iv:mx6nR7vP7l3xGOee1xO4qOkFazWqEo34Ta650c/H31g=,tag:mfk0UvIOTUDecAMXKYSWQQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:YNWesa1SequZXG1i5w==,iv:VAx841AkkkSqpIe4owAGRTmEhYOdEHYbjAp5iOYrx2Q=,tag:1teAfaQwTFkcqAzVQhkLNg==,type:str]
-    #ENC[AES256_GCM,data:Iirb+lnyEGwO4RFQH+aHT986TKqTNazQZ+lA,iv:2BHLgKeR3VHfw+/He6REb3K32pSjls1imDJSuaQDpc0=,tag:aJlidmJde5chIQx5pRGzzg==,type:comment]
-    #ENC[AES256_GCM,data:bPkYWUoLHG9OfhARVk7XFR2X4nG963Yrcym/FFZPIeT2+dG3Yc6JuO4TygC8zZ0qZsGfcHruwhxvV45mmTFmGTAXpwrH5kNCeZfrMyfblOeSrPzHpqeIadQ=,iv:kc37FcOo9f1WZQeWbRIyEg0LoQ5eVfKctuDiMRyIhoc=,tag:Bz00k1d7jWCg0zwbBzD3rw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:R7XFpyf4YS+YQwfp+PY=,iv:Bg3JdfhPXgGzZnl85ar8XPr4Ql8S+6luKcYIPKskf7U=,tag:jq7Oz1uVjAg1TGp/LBP05A==,type:str]
-    #ENC[AES256_GCM,data:dzNG7mvLMG76dfY0qUsyxsJdZfl5a8P1hVJsFd4trKXr3Q==,iv:ZVjyeGVs0qLbN5+OLfItKyXPSYdxuaBnIk+CzdLnKaU=,tag:XNCN7/JLh4rr4KehN9AmoQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:FO3JwD5ajK3DCgkZDg==,iv:wMNx+lLkbnzpx0o6KV/cK1KwgtBFZO4/8UyRKEaXn5M=,tag:oErpKW+DKYRgCsAD5CWdZA==,type:str]
-    #ENC[AES256_GCM,data:GX+LOnmWItDQddwI1cNkNa+wuu/mPXGXtlVd1umZmh+Gt6EXsQ883HRKjU7nt38=,iv:bbuFl6JsDxa7DMbJgLdSr1gN7v8HA3XyYcddbeN0SKM=,tag:5ihbtLnb7X8kodw5RlnHNw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:5MqyCeUe7iO8z9W41SaGUn35kCG5gge/s4GlaRvDfA==,iv:plj/OZp+JiR7epO5+CrDgxgskbEre2w6zTvMkVcnVeE=,tag:ApvsbYefye7ex5Kz6Q+6Qw==,type:str]
-    #ENC[AES256_GCM,data:6XvacaJO5NDJGvV3JseP/YpVCubNruvsd+TXItYADiU30Cv70Tuuz/rjrx/ttZiARSQdwZQ8FmXCQNBnc0VV8x8qiGdMYQY7eVZMj0lsEuXbtA==,iv:2s2fGsrfr6ZF3oBMXEBP6y0MkrWmxdW8QDEvK5D70iQ=,tag:R4VGipLqsRMfRxf7RC4fJA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:/N1B+kveL+Y4wxQaNw1C,iv:0EG9g6hJprJ4KnwHxutcnQTBQQ7tECT6LGw8WerhQ20=,tag:LmC2f3a+cMuCQVywvxdGZg==,type:str]
-    #ENC[AES256_GCM,data:NpPtvaH7pktHeJKIEqvCkb+laxTR7K45DCSFUkOjmAAj,iv:i3vpivaoYe+DfbKx9/fyEbMGxyuUEofISAFe9d4jX3o=,tag:Ec+tDjhxs9iof/i5t74iwA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:vT5SoV1my5RnYAqnmBqd,iv:gZgTEBf2uMJNtOf/V1mTkirPxUj5NQJPErn/DMy72+U=,tag:YaJsVoGNM2iwYseEpVI6gA==,type:str]
-    #ENC[AES256_GCM,data:+9JF3kEk70Kb6ROUlFU44fpAUV5x+E1JnaMlILDA6jq5eh35O52Edf6kr1y8tV7yMtUkoH0lFnNUF+mEI4nwYjZsrEWHNIEqz1OsujuD2hk=,iv:pLsANF0nrYaSbSIvjgJOZEXCyv1M7Qmu5VFwSnkiO9c=,tag:L8Y4Z3YQmhvB0IphhYZ8sw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:2b5YqzTmC16BS4ihKNSo,iv:nJzywAPp9R0P+g3Vq/jpTZD9JBA2LTBpfsEUAq/wH/M=,tag:pIzkdsdiLzfiHtfPIMnh2A==,type:str]
-    #ENC[AES256_GCM,data:OiLhvmVDsQJDb2Awpfk/WYJLjjfr0p9iF+u8eFfWPRupbTMI5lja4JJldIQ7BLGNZ/HxU+Z3cyJRWX1BKkXHNulSxBgSm/4UhYLOkD3Nct6BoBV3H3Z8,iv:E+MUtb1W2MYnsza5HefSlFSvlIevoADGz1NJf+dW7ms=,tag:m35WJPXI3I9A2WY4oUqdvA==,type:comment]
-    #ENC[AES256_GCM,data:XAwG+wBaKk4M8gZrZ3GZ9AuA1NI+gnaW4cf17TpeD3v/RfW1aX5f+HG5FXOncE2fRBn1Y5pe5oWdjy/xHHCklx6yPLebjfDI/08+Kjxg+6UyeuFCc9d5Vb2VXdtlBAVhPxZKf036rQ4mj2OWd0Y168u0aB8yHYro9wP+TA==,iv:U7wiUwI6PF07xmXP1zjcC4742hlzuIx+zar7/t85J0Q=,tag:f5bTF5wdxMGbR3+iOyvbJw==,type:comment]
-    #ENC[AES256_GCM,data:10i6sYXz1YDG9kCrSwRrHUr7IYdJPNLERwqzbQLwjx6pBeg6T9qUOCsZ1vNe0MxzJILXcZ8YGejulBRZr9GDQXRlARitklBZdYKZkIbfiRM=,iv:FwVvc4CrFTuiv7P+A9c4TB1fpD6Bxx3RVzk8ZbZFvBA=,tag:DXHUulHAEik0h2Uym5oA7A==,type:comment]
-    #ENC[AES256_GCM,data:v7R8DskSTUncQm8+MLMht1vJhVqCCNzykLgZdnlKJH93qrT72Y8H+a0cbsLcjxIMkd2JdB70,iv:+plyL2asupuyZkxRR680ixJVI1a1QjEC3GTT3d68PkM=,tag:YLihkptsIXacuL88uS4NIw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:vv5QufD7eoAIM+45,iv:94prv7MdMeQR7mX8fZeE/VwAZfMjg21neoEGjjA6CuE=,tag:4VfRDQ/P8DubZmrNZlPuRQ==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:mWlbJ4GBB0nie6wqRZ+1nwM=,iv:ndt/yT60YF6ooJbyxVIayRnYkrDQQk4BCcbKH1Ouwl8=,tag:3qATd9LtJSkRvS3MgAohzg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:QF7mz7avX5n3leuDEC5pdI4S1SkUA7aj19yXmbCZYFo=,iv:K2RQ7bqOxvJedm45OD4jeLEYgc+gZOW1XXzfLT8NjK8=,tag:wIj94NCt4m9yGmjIVIIEBQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:qmpCu/KSoEdks2Y1UnrZncW2szMRfrEGE7cgFDqfxfw9addPmpKWpA==,iv:Ps+4Gec6vBY61wmWwh4ke0n8/xwZ/6kzlCQznivo164=,tag:OQhtrFWKyCd+CbbNsLBQXg==,type:str]
-    #ENC[AES256_GCM,data:/DmO9lR61pb8fPOHCyv3R8mHEA+LMGpBI8u8szVTkFLsaGMgvKjMUfXnqXO7Jwq2LBnydiKnjvOmx6KpkDY4xQ==,iv:ldUY+d72PjYfwVO6XSaFiPtEpoF44LRMnT3W8J5XLpA=,tag:Zy95bfCcydc1v81vgFYNlg==,type:comment]
-    #ENC[AES256_GCM,data:7VCVi/+ir9VupcdMvso+HK0SufRU1UmW0AU3DCM8Q0HvIbPajx2/uFO8EFEDd2Ii+kwruHt0hZA=,iv:s19F9dic/UFrjBxbDs7eSVjJfT3edNfVXNfAgjdWH3o=,tag:ldGD6eGsTd/UqEUuvEQ4Pw==,type:comment]
-    #ENC[AES256_GCM,data:Yi3oi8imbB7opk+TsqiVnroSEzibTxD/PA==,iv:4Ogbuu4eCmcgwleyibnayIrVXMfE43tR3lREeLa56pk=,tag:FfGn/jzbuEyyuVcBKt9ruw==,type:comment]
-    #ENC[AES256_GCM,data:QAFIFJbAMiB0SPWmueoC9/WaKPOB/zVhragylRAub/rKROWTC1rOU41qAHAUXQA95Bb+ZfQFYplO0hHIptTr5H1FZE+DPlcZUuIqHNU=,iv:LRC584CukZDto4FsQto/xa3inXr42KlRRsjujpDfw6U=,tag:rND3dtp3POZa8h8LAOxERg==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:PwNck8sXIZWBETyO+jNiqRmKGXWNH0e5vJwdBt9OX5ULx3UgS35zlEL4mrAbz2DH,iv:4wh+Ei62hz62CVtBQsXaEMJQH+reEwaeOKo0yf6zjH8=,tag:4cB+MzhaHFd5Lb7YEr+QvQ==,type:str]
-    #ENC[AES256_GCM,data:51ex7PJdWNEYZH6Ap/Fr2hP027OJTYG4yAAUjmGVl34T6pKxf/bpgeyWfvvypLYcwhe4pVvo83/rrZRcHZjtAaomdPwRQps=,iv:317RWXI8yuf610hQ1WOXbfZABADzT6ON0HXQNUWVK+0=,tag:r39OYB+DsLavy9NtfUuDYg==,type:comment]
-    #ENC[AES256_GCM,data:ng5pgHJmvrjlSVi8Fdq1ttbaywrG1FM7vqaMWqaAiTywyFRvP4FEW0/RVO6atgoJquRuopOZ,iv:qVFE2pZg4hUj+B2hWpeKGw8Np5IGQd0ThrsEbsNtiIQ=,tag:uHhLbYB2Lj9G+0U4W7M3pw==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:nop3DbxkVw==,iv:BZVQy6FcQgjFZAVdxuJ/7J4RizSwtU0NYExpZWXlvS0=,tag:C2b/Gkodjc913xSkqsjwCQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:dbbXVOPW+s/pD5XVmSefyctn9dE=,iv:MK3z7pQEJNWLJryz7M8Mt/2L3dK4P/DwwA6BWql3Seg=,tag:DI6EMjMgnvKlVQFaGB2g3w==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:aG6TW8J05Y+Baok=,iv:8qLtdhBWK63/MXt7FQ2BVdxcwm+W5tjStyriZM5mrGI=,tag:9Vnkwk0+fE58SoGH4Vm24w==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:N1NbIMEwTuo0oXQy9lGM,iv:k9DU+LmLrEfHLkRNEP4S4Pej4hsyevfXqd7PXsOFyNg=,tag:hixADNV7AVVpCMWYGgITAQ==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:XVbkJ6nlpkDb3h1uGhF/nNS+0UsSg2SXkw==,iv:+2YgMUSTf2Rfg8nUd9jmMIPyeHvfg/W0W1ugQzeLHC0=,tag:cAbG+s1o36T7ZEW84aooKA==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:UwutXVKrBy92zz1XuGDQULfasjBHvOWBhwJ6N0y3GA==,iv:/MvJb12L+AGJE0lTr4Mqai8MTNISmmCoLlgicmIMBU0=,tag:CoyZum6GLNmugr+oHO+gjw==,type:str]
-    #ENC[AES256_GCM,data:1SQSIV/NukKdsJz56ZqbD5GbBgoX3t7iV7PiD2OiqaHOs+pk3fY=,iv:vTxUUt7eAIT8kZCqBSt6m9ZuiO8+5IEMal2oE1UuUSQ=,tag:IfBHnAsJt8HPbOrQHzlokg==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:2y3Vv16Tsf8xYL8ptYyipfbe0jc=,iv:ZJ3l2rcma1NaCJFPNc+50g0Lv3nK5sirQOEsvYUVM4M=,tag:dzROhQPOd3XXYaoN56/d1Q==,type:str]
-    #ENC[AES256_GCM,data:hkOxa58rZfkBHCDyKUM=,iv:Fd7S3i3uyxczYUp8xLeLH7i55LOFZ1LFMglpr3VtIYQ=,tag:Q0AVF5v9cpxO0+ff2KAe9w==,type:comment]
-    PODNET: ENC[AES256_GCM,data:DFR6UNjRsA0yh4jqPQ==,iv:wmMd9yReCEh7BKNtWC7X0euqMJZp6NY/jp4RiQO1Qao=,tag:ZKGSB2vHppBNQJMJw7aWkA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:uZc6b8Fy2ci4cp/ZZQ==,iv:QJEdeUIMUTFcpfmOSqskoNX79Vhm5wKJl9EWjFnzgDU=,tag:G9syuQM0EJ+YXrk7L0EsmQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:cN16Zg==,iv:q1EfnGgSkewUjBT3Mz0XQneAVVyCN4/G+/cHH9SUdvc=,tag:1RbD1pnOBKawDG21d+3rSw==,type:str]
+    #ENC[AES256_GCM,data:UyiS+5BtIm7mOHNj/uJ70qMgubG3oufQWgttK+xzRyEpLaiC9ZZKOKfQsKNAjkA36X2RL1QYpa9rl5mOMwcqZtI=,iv:6rky3mDOjlE73ZBP50J7kZgsQs6XqZNMTEA6BsR4/S8=,tag:cHyF51zVC7akITwYyBFk9A==,type:comment]
+    #ENC[AES256_GCM,data:tEHakQTfaYtVfol20Fvd2GzYStfgw+0ahg0eAgFxvBPY4a6Hpjy12L9wOXc=,iv:3bMLo2Tfa+jQx7mZ7kaAhMIM8/O2Xi7HXGurkxWT9eM=,tag:Le43p83MwkwvVyrSqDkMig==,type:comment]
+    VIP: ENC[AES256_GCM,data:SQmqtE3FpGoEmR3dkA==,iv:vJMXCggNeIM+EKw3W+V6BV5r6KHkCpIYPqRZn00pD4w=,tag:y4Ksksz17oTouIimwWEK9A==,type:str]
+    #ENC[AES256_GCM,data:u6LUTba0yX2c3ViuAgxO/Rm+HyaFfZ6nDXW9,iv:tqb0rqZ01FrWmsnfAErnOJNwCK/BNlWOZMj+86siNbU=,tag:7AmddC4Eh5b+bozTMMSTUg==,type:comment]
+    #ENC[AES256_GCM,data:gyJFVbrCMPhTd7X10GyU0strGNFSUKDod0PbMG0pyuGF4BfUCdcSHvKOzv1do4MmVBcPkLvq365y09AH8bvDyyhwu5pBrSPck6xJ68XFVus3QjTj33w6Z6Q=,iv:w+8v14M9eT/HLnOuZjdopMu58038sx6/xI5l0l6gLlE=,tag:ku14NqSGrfqo592WBX3jaQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:7s+Lg2SVB3KZdn2YFyk=,iv:pq9YwHzoonSy3md0T6qmYMk9eyeYWm7eh3jmmT1PZvY=,tag:JLBRDsuBRDiOvCGwS98Hkg==,type:str]
+    #ENC[AES256_GCM,data:lyAzqc2fwbj+J47dsoqp79N+iEpRCzUWisN5pJEO2FCd3A==,iv:tR4n52/PiUIUPwkWqOTTVsX13Qo3dfAQVpCzNGh+lkw=,tag:OISCyYlojneRvTmNFmcflA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:X5duTpIR34OUCFxmAQ==,iv:6YrDWp6K1vMDM0TPX9d4VxymJBg7a32mEU23o+78OrI=,tag:O3Nr94nXpAGHgY6rmUgO4g==,type:str]
+    #ENC[AES256_GCM,data:FzN7ej0FAlFtVX4SxxF2iaV8tPAAS4NpqLbqWuJ6YhV9CZxqVamF0V/+pDwgcZM=,iv:+CZzEKxWFHqTxJuLblpj03ZDX5wgw8SHpXMwmyWWN/s=,tag:UfKQ3ZJU/Sfmulx89EwgMw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:JyzT9F5R7m+02Y9xrqbFHjjUWL5VooRIjXLVMaGAhQ==,iv:vIOY5undliGd8YoEpNpek1bbDX/FzQO8Sy82RkyGvK4=,tag:LqKXBR2O5ek7q0yq+XNjZA==,type:str]
+    #ENC[AES256_GCM,data:3BJZpuPoMswsrv9spAyo8CdQO2IQO786EVuTWoPchX3maB+TOcwH4u6ZrZ/iHteutQOuY5iUtMV+2GWJafUbsDRUdD/aR1IfNMF3YDElMDVS/A==,iv:gihYwA4GzzRKIc7ofhyYfgil5Q/H8p7nSiI4BcCP13U=,tag:GTnJSv5Q8nnO0VehfE+7wg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:aSxMd4cTE5PbiEH3/2bj,iv:nRDV1LZnAi9HPRz4q4kvkrH3oCk1BNJIIrmq25aUfow=,tag:YxeBSQ0+o1oQ1na0mw43iw==,type:str]
+    #ENC[AES256_GCM,data:6RRoOBekLAKyNzDogt0FxDhCosqFrf7xMBhbgN1tkFbs,iv:LvMmpqZcseIMn3AkDtQCGT4UQv+GySPQrLp93O6jykA=,tag:H+zvuV8GGMaRKI8CDpnXBA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:2YmgoYJjBqG1Uf3xb66U,iv:Krtgfl+aIg5lZun+HkaWX56+AF+h0Jn7qF02BmBS6dI=,tag:p7zXQ2dkMDVxu5uv8laUFw==,type:str]
+    #ENC[AES256_GCM,data:sARtLTgORrx89ZxKyjPFR/OFjNNfGUuV960l0EQL0ZBZC9BkOQOgiNzywQViYhaWq2RGlifuISGX10IVjO1hDbaA5aC0GDFH7x/ak+4ofO4=,iv:6prwwEZW0dq/oz5Y6aAriji9/ZgL/IyhmOHfW4XVnsE=,tag:MhNr+/HEp3BVIMufurjD4Q==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:qBU0iUFw3x7iZdNunCoS,iv:XkOKkfntkvlOjP7nzNcC7RrWVC7+n4aAEi7vti7c9TM=,tag:tv2NX8yqNJf8R/MGcFgoaw==,type:str]
+    #ENC[AES256_GCM,data:b50ordvJAdvnxWAYLXNRPN+8V/VcelgpvcwWY8aF+iei8hdftf9m7xzdzaDdw7bV8Rv56Z3O5a6rFWfJfVm+x1+JlSJwq5mlGDe+jjUsM4Y9mXGC+3vQ,iv:+kYwmvvlVKrf2rj6ohbfl71foJoMfoRQLDgM6j1fAa8=,tag:G06Ikci0mXywkkuDCnoCiw==,type:comment]
+    #ENC[AES256_GCM,data:qEXl0z4hHmfbzUePVrNrirYGhLhAW74oxFxQNefJSpCfMyLFkYwrh/UcMWyeJdclewllDHb0EJb1dvpeRZ7oZ5EfoUEhsCd0U1HFw6RQXmlztM/ASlKkVcLuVSE7Qo76YmxGDtDIkEp6kEq+9SBh0Wj/aJLIL7x2ViWVGA==,iv:s6OWVz9tWLWd1c6uHPSeteRO7F4C1mIbdyHWREHDfWY=,tag:55eYgqn5vYaiYY0L4GrgAg==,type:comment]
+    #ENC[AES256_GCM,data:71rNP3UlE/Dd6w0wxGb5MkWRxlKLSRqYkdall0kUha2Eh8gkyiB164N4xOB6d+0ofEMFbMm/ri8/7OyW48FLoCt+mC+Wm6zmgju/wJLbrXw=,iv:HIeIorgeCSr6lxu0x+w9wgFXkvdvwi3JUn5zDLy3Eyg=,tag:NkQ8lseBchj0EDFDyC3bHg==,type:comment]
+    #ENC[AES256_GCM,data:yeMhJDk6mRDOYpK+Vg+roi+9VrVxRz3tRdaAN22Dmp2f6RaF5TpG/72O5n1UYwt4O+dgzAmj,iv:KuQJAg5fEagqm5i00Lr/xPvGG+dUxXN7LNsq7DtAthk=,tag:fSTbGrM+m8X0A0+lCcchHQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:d//vsA/2fiP7KqDe,iv:1NK6/upHbLLwAwGa87vEPV55UC1nK/zysEBzddNX4/0=,tag:uIv/q9XYwvyGg+KJz2gF0w==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:/UZ0MG+NdvsHNxwsodv9XxU=,iv:O2Y9bPDU1EGgywqe5gkPFeTlhTz802Akvxf3+RUDJ7c=,tag:DvV2wAnEtazFJH41tCOJug==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:KZybfZXl7UBRwwxk3XH/GGrFKN8cV72OEvkXRPjBccA=,iv:NGqT4B5zm0fkWjhFypkpgW3dJE9KCHuVWZThp80wbgo=,tag:jmVku6viztD6HWStdJb4vw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Eo2xoIK2jMruVtphq92Mum0HrCl3s/Ti9l2973rTAi1h/E2GsGTnzA==,iv:m2jaDupeME6lN5ABurkjOsYakjx1wv/niL13nitUxNw=,tag:NbzflDWyP1Z7cPCH6GsuKw==,type:str]
+    #ENC[AES256_GCM,data:Eb0yZi44q5js2AYPC0y8VAjDK+GcxfQFurG+RsWFYxlXHwa/EJ+ZGNUEQgbiBlfvRlmayfRtVvIGADGk5C1xzA==,iv:ijASprHQoAe7vocdwAKHymPyFoq2czLOF5F3xq8ByHI=,tag:yGQlaHYcX+l7Jc5U8pLKVw==,type:comment]
+    #ENC[AES256_GCM,data:mU9XIF9a2bo33Wv1rH/ntL4UaG88HLIFB7l3ccwAOSsTRW1wiv5vqzDr0b30ApUkl33EdqmqXQY=,iv:NCaizq7RNTdu54KVS2jV1yb+KEEPj+U/kN/m4sXJgGY=,tag:AFNpDPzvNogjZymhr6hpqQ==,type:comment]
+    #ENC[AES256_GCM,data:C4KDh+MKFXFskZ9ibcci1oW7zl0hCagksA==,iv:hJVFvP8mFIhdKVpNKmbKhenOiw3TUGDgDsU2JeHG63I=,tag:51NKCNKoQLf0OjfcBfd0AQ==,type:comment]
+    #ENC[AES256_GCM,data:ipxdS4i0kcBBN2YUcehZcV2iCgySmoRizu7kEuW9/okNiIgzFRQ1u+03cVtUuJKqatSFqYkOF2yZm6n4HUxrwWtYUjcYlOw7zHneMmE=,iv:Qx9suLl6gBTSPFpcV3ZmsBsbRooVTF3Ue4GgM8wp1jY=,tag:X9+LQrItpoxDBnmNkhU4yg==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:oeg1m+tv8XMv9okqP+E8tNXtqNo6ISZCbO8i0uKiLEJkHq/ThJa+VLBYdbcFuI2T,iv:y9PNpyo7Hxlw25FLz9UiOZoxPtMPFkz9SvDOwvnWXvA=,tag:8034K48hzciPZ7XqvH1LiQ==,type:str]
+    #ENC[AES256_GCM,data:T1yuzu9g7J4mKA5saJoORocEwPH4MAN48UeGuhfEgxXfrCYVyGpD3LAzj87gjn7+n5YtbKsXtYlztsh9v5JMqg1bFHAy9I8=,iv:obrDV60wWLltSkya2WsooEB0kHBTrNMze2DilxO0MT4=,tag:09GjUuQuazr75Bo3VGpdpw==,type:comment]
+    #ENC[AES256_GCM,data:29uYOLQtHBIXxGi4K+vWcaQcQEIj/ajOY4wRcvVLvcEByE/h9PfFnDWIRmGQYCpr6E+P3bhk,iv:YoRfs25/d4yXzQyn33jIbRTvyrw8jzS9MNHDOIxmDJ0=,tag:xmmhdq2bhC5IMdtTtoypYA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:5yg185UMrg==,iv:J8cn7aoQe19NVaL48LD5E8m2I18Tsq43btBktl/MUks=,tag:3PhFmt0S4+ZyQeUiP5OC6A==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:nJEaVvWUxyHNdwkPdcZumY/he7k=,iv:UHRclQ0B8ROvzHOu6SeAdkoYm2s7bPM79Idsr9tZDj4=,tag:tBXHj4HVE0rKTVXKJdVixA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:MkNz3JH4VZG/1e0=,iv:ZDPn4wJVsb3YfquRAqO4DCNPQ6VH8Qu1HMLnMhdcqFQ=,tag:G1jpwoC9iwZhXm/ErB8ksA==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:58RMMItU0yK02jws9GWr,iv:5CoztYCkT3fiksH0e/6r2UKAt+SQ3vqblkYrnTkeQfk=,tag:f4kL6HDZu4Il44Jx5iaW+g==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:3xRQiE9Tc9fAESZ3e3T/rCQvl6rthUnSmg==,iv:8L+x8sn8ryj2yaVMvCzLmsjQZOEsk4QvKVHHLZppjpY=,tag:03O+kHVAB+yS9yfIeMxbtw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:vXWYHyJH137gfoL4KiHPkhTepmLY0ZZekMn7YDtBww==,iv:PonEI7j2/KKPVJ7bnzPiAFjUKoURumCN1zStEhzGYPc=,tag:e7SjyH1SKONgaIwIwnfR2Q==,type:str]
+    #ENC[AES256_GCM,data:OZKp9hi9FayyKBkScxpHMNby/0BBbQHxvaqPQlc1M84n+7yq9rc=,iv:1GTe88ycotY4TYOIRhfLKHX0QH9MG0Q6Wz3cMPoMKiA=,tag:iY6iPWgT4ljeVxYO4OP+wg==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:23Wq8zoZwdFAYgkA/H4xpQDaCTk=,iv:u0kB/8sAEM1+248opeFIX16lviaK8/8xo/tEHXOLwfQ=,tag:9yBtaSStxC0yJpSET4DXtA==,type:str]
+    #ENC[AES256_GCM,data:IMKoI+Ii2KG8f7rdaRU=,iv:vJgVOngWP6TWjD4o1En4YQ4KA+9wHRyez/oXjGbAqdg=,tag:GebtjxL7P9VHBPWSVH7pJQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:XOhOygpWK18QA0oiPw==,iv:QfJS5vjIgQKOb5emwjsHH6AY5PVG9JQSpk3eMopTZ5E=,tag:AtwzWWw9/k2IM7CDaeBZuw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:SQZlVrB84xYVuj5upA==,iv:lZpScptm3L2884bkkIhxNkIemSPyUjS2r89l4qZ5zeE=,tag:crHS8avLI+mRZdIQkn0IRg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:ut0i0Q==,iv:wTJOq3eYbD5Cbbx1wBcoTjyqFytfXjJzhT6NxGxM6Jg=,tag:K6DgP2ydUP5hm86OybSN8A==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0MHREdDhEeE85NnhXdUlu
-            MXViOTdNdDFTZWlpMnZFVmlnWms3b1l3Y0djCjF0YXRwUzlqeW8rQmpJZUNJTjNU
-            VjhJUnVIM0NKZHZHQy9wWGx0c0I0MG8KLS0tIEVZbnR3c2NyWk5SSUswUVhVellx
-            bll6MDljUjNsNmMrVHNYWmcwNzU4bWMKJc8M6w18OAoUnAEKixwZ3Jul04bcOiV8
-            ORDZ/aHmLGnVQfpMys5Df0K7HO+B0hGkt76NSdrZOvtShcFPi9B7Cw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuVVB2WnI4WW9aaCsrSE01
+            WEhjRFp5VlU0UkV6RWc0SExoaWQyRkc3blY0CitGcFdJVXl4bUUzd25DYWFpa3BB
+            R3dtbmtmdUhkK3c3UmQvNGsySGZWTEUKLS0tIGJUOWVSR1ZtaXMzS2xJUzY3R0Rz
+            Rm1MWmJDemRlRjZ5aUExczB5aVB3S0kKnEavaJm6pHcX6P+DRBi588QvHv98v129
+            u3/vg1p+cfMF2WaDHXp8LL3YX7vq5g+E04FkUC3Utxc47qz6GloIyw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T00:24:33Z"
-    mac: ENC[AES256_GCM,data:TvqneM59QQDXRM2mKffAp079WZ90DGN5ol/0vZJTSjj+23qqlsKJbRRv080kcxIu287sgYni5MqnI3fxgT5GHnqgn4dzvb2Wan/2QfbeCfLWhDC7/dzpYZywWLzDHQDd4eLuJvmqGIMQpu0GkhmkNTfqkzzrt3o8QpcuM2gTVR0=,iv:s8X0S35/vmtOrzlbIdrSKG/ixe+cfE9oRZrHN9SxjGc=,tag:rS0lFwbPNPn7bC5Xc8xxYw==,type:str]
+    lastmodified: "2025-01-19T01:45:30Z"
+    mac: ENC[AES256_GCM,data:IBZSMnOT7NO4ENc5iBbJQdqwfv7+qnFlXbPkAcAimTtjauqQVwIo/j5kwz2BACIy/+lXtaAgRDRQVeCp5JRnpELpX+IElscihM4QiEarNL0CiFEiiRvISwQu62P/Dmgo0/ziBCSnKPTnpr5j54EmLfs8HrD9qZT+N1FpV13xETg=,iv:KUL9LAL1tn8xOsfC6aFHwsMgJcNCrL1NJ4GlIEKBdLo=,tag:PdRfaDyFp5bH/KYj7RbJHQ==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
