--- a/clusters/main/kubernetes/system/kustomization.yaml
+++ b/clusters/main/kubernetes/system/kustomization.yaml
@@ -14,5 +14,5 @@ resources:
   - system-upgrade-controller/ks.yaml
   - traefik-crds/ks.yaml
   - volsync/ks.yaml
-  - intel-device-plugins-operator/ks.yaml
+  #- intel-device-plugins-operator/ks.yaml
   - intel-gpu-plugin/ks.yaml
